MDEV-33990: SHOW STATUS counts ER_CON_COUNT_ERROR as Connection_errors_internal

Bring info about cause of closing connection in the place where we increment
statistics to do it correctly.